[gd_scene format=3 uid="uid://cyrkedkq4j54t"]

[ext_resource type="Script" uid="uid://d1l1jkmj6s53f" path="res://addons/simusdev/ui/SD_UIInterfaceMenu.gd" id="1_fwosp"]
[ext_resource type="Theme" uid="uid://bn0751ku2d5fx" path="res://src/themes/hf2.tres" id="1_rgnhm"]
[ext_resource type="Script" uid="uid://deqt2eyqhid11" path="res://src/ui/inventory/backpack.gd" id="2_v4jt5"]
[ext_resource type="AudioStream" uid="uid://but27e0ryijd2" path="res://audio/sfx/backpack_open.ogg" id="3_cq5k6"]
[ext_resource type="Script" uid="uid://do3dlfequ75dj" path="res://src/ui/inventory/slot_control.gd" id="3_v4jt5"]
[ext_resource type="AudioStream" uid="uid://cjc22ogymfmjm" path="res://audio/sfx/backpack_close.ogg" id="4_5g0a8"]
[ext_resource type="Script" uid="uid://3h3uaulqm56k" path="res://src/ui/inventory/backpack_custom.gd" id="6_egj3e"]
[ext_resource type="PackedScene" uid="uid://cc2mybbei2g1p" path="res://src/ui/inventory/avatar.tscn" id="6_gl4hf"]
[ext_resource type="PackedScene" uid="uid://cc6trvruecdbv" path="res://src/ui/inventory/window.tscn" id="6_nlyav"]
[ext_resource type="Script" uid="uid://c4okankbwa8k" path="res://component/inventory/CT_InventorySlotCloth.gd" id="8_egj3e"]
[ext_resource type="Script" path="res://component/inventory/CT_InventorySlotHot.gd" id="9_v1wcs"]
[ext_resource type="Script" uid="uid://dnh4tar62u70p" path="res://component/inventory/limb/CT_InventorySlotLimb.gd" id="12_5g0a8"]

[node name="Backpack" type="Control" unique_id=810392567]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rgnhm")
script = ExtResource("2_v4jt5")
_audio_open = ExtResource("3_cq5k6")
_audio_close = ExtResource("4_5g0a8")
metadata/_edit_vertical_guides_ = [621.0, 659.0, 1270.0]
metadata/_edit_horizontal_guides_ = [82.0, 172.0]

[node name="_Sound" type="AudioStreamPlayer" parent="." unique_id=1269233315]
bus = &"Game"

[node name="fade" type="ColorRect" parent="." unique_id=1338478649]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7058824)

[node name="player_slots" type="Node" parent="." unique_id=1210786511 node_paths=PackedStringArray("_container")]
script = ExtResource("3_v4jt5")
_container = NodePath("../CenterContainer/HBoxContainer/_PlayerWindow/ScrollContainer/CenterContainer/GridContainer")
metadata/_custom_type_script = "uid://do3dlfequ75dj"

[node name="SD_UIInterfaceMenu" type="Node" parent="." unique_id=609989605 node_paths=PackedStringArray("target")]
script = ExtResource("1_fwosp")
target = NodePath("..")
input_action = "inventory"
close_on_escape = false
metadata/_custom_type_script = "uid://d1l1jkmj6s53f"

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=649680854]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer" unique_id=366905357]
layout_mode = 2
theme_override_constants/separation = 128

[node name="_OtherWindow" parent="CenterContainer/HBoxContainer" unique_id=1339617772 instance=ExtResource("6_nlyav")]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="_UI_BackpackCustom" type="Control" parent="CenterContainer/HBoxContainer/_OtherWindow" unique_id=2099676269]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_egj3e")
metadata/_custom_type_script = "uid://3h3uaulqm56k"

[node name="_AvatarOther" parent="CenterContainer/HBoxContainer/_OtherWindow" unique_id=431189554 instance=ExtResource("6_gl4hf")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = -0.003
anchor_right = 1.0
anchor_bottom = -0.003
offset_left = -90.0
offset_top = -89.878
offset_right = 0.0
offset_bottom = 0.12199998
grow_horizontal = 2
grow_vertical = 2

[node name="_PlayerWindow" parent="CenterContainer/HBoxContainer" unique_id=1923403923 instance=ExtResource("6_nlyav")]
custom_minimum_size = Vector2(515, 446)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow" unique_id=1218685512]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/ScrollContainer" unique_id=1624756412]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/ScrollContainer/CenterContainer" unique_id=240382422]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 6

[node name="_AvatarPlayer" parent="CenterContainer/HBoxContainer/_PlayerWindow" unique_id=1942722791 instance=ExtResource("6_gl4hf")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.5
offset_top = -311.0
offset_right = -265.5
offset_bottom = -231.0
grow_horizontal = 2
grow_vertical = 2

[node name="_ClothWindow" parent="CenterContainer/HBoxContainer/_PlayerWindow" unique_id=1548234732 instance=ExtResource("6_nlyav")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.5
offset_top = -223.0
offset_right = -265.5
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_cloth_slots" type="Node" parent="CenterContainer/HBoxContainer/_PlayerWindow/_ClothWindow" unique_id=2099228590 node_paths=PackedStringArray("_container")]
unique_name_in_owner = true
script = ExtResource("3_v4jt5")
_container = NodePath("../ScrollContainer/VBoxContainer")
_slots_scripts = Array[GDScript]([ExtResource("8_egj3e")])
use_default_script = false
metadata/_custom_type_script = "uid://do3dlfequ75dj"

[node name="ScrollContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/_ClothWindow" unique_id=2002325819]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/_ClothWindow/ScrollContainer" unique_id=1992019274]
layout_mode = 2

[node name="_HotbarWindow" parent="CenterContainer/HBoxContainer/_PlayerWindow" unique_id=1214025144 instance=ExtResource("6_nlyav")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = 233.0
offset_right = 257.5
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_hotbar_slots" type="Node" parent="CenterContainer/HBoxContainer/_PlayerWindow/_HotbarWindow" unique_id=1734855913 node_paths=PackedStringArray("_container")]
unique_name_in_owner = true
script = ExtResource("3_v4jt5")
_container = NodePath("../ScrollContainer/HBoxContainer")
_slots_scripts = Array[GDScript]([ExtResource("9_v1wcs")])
use_default_script = false
metadata/_custom_type_script = "uid://do3dlfequ75dj"

[node name="ScrollContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/_HotbarWindow" unique_id=137663548]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/_HotbarWindow/ScrollContainer" unique_id=1668169088]
layout_mode = 2

[node name="_LimbWindow" parent="CenterContainer/HBoxContainer/_PlayerWindow" unique_id=381566854 instance=ExtResource("6_nlyav")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.5
offset_top = -311.0
offset_right = 254.5
offset_bottom = -231.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_limb_slots" type="Node" parent="CenterContainer/HBoxContainer/_PlayerWindow/_LimbWindow" unique_id=191613648 node_paths=PackedStringArray("_container")]
unique_name_in_owner = true
script = ExtResource("3_v4jt5")
_container = NodePath("../ScrollContainer/HBoxContainer")
_slots_scripts = Array[GDScript]([ExtResource("12_5g0a8")])
use_default_script = false
metadata/_custom_type_script = "uid://do3dlfequ75dj"

[node name="ScrollContainer" type="CenterContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/_LimbWindow" unique_id=747044731]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/_PlayerWindow/_LimbWindow/ScrollContainer" unique_id=1519461255]
layout_mode = 2

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="closed" from="SD_UIInterfaceMenu" to="." method="_on_sd_ui_interface_menu_closed"]
[connection signal="opened" from="SD_UIInterfaceMenu" to="." method="_on_sd_ui_interface_menu_opened"]
